TestKube/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-container
    image: nginx
    volumeMounts:
    - name: uploaded-files
      mountPath: /data
  volumes:
  - name: uploaded-files
    persistentVolumeClaim:
      claimName: web-claim0
