TestKube/test_pod_azure.yaml
kind: Pod
apiVersion: v1
metadata:
  name: newpod
spec:
  containers:
  - name: newpod
    image: nginx:latest
    volumeMounts:
    - mountPath: "/mnt/azure"
      name: volume
  volumes:
    - name: volume
      persistentVolumeClaim:
        claimName: backend-claim
