TestKube/celery.yaml
apiVersion: v1
kind: Service
metadata:
  name: celery-service
spec:
  type: ClusterIP
  selector:
    io.kompose.service: celery-service
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: celery-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: celery-service
    spec:
      containers:
      - image: jipi2/licenta:celery
        imagePullPolicy: Always
        name: celery
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app/uploadedFiles
          name: proxy-files
          readOnly: false
      imagePullSecrets:
      - name: dockerhub-secret
      volumes:
      - name: proxy-files
        persistentVolumeClaim:
          claimName: proxy-claim
