TestKube/dotnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-server-service
spec:
  type: ClusterIP
  selector:
    app: dotnet-server
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
