TestKube/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql-database
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 32000
  selector:
    app: mysql-database
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-database
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-database
        tier: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
      # volumes:
      # - name: mysql-pv
      #   persistentVolumeClaim:
      #     claimName: mysql-pvc
