TestKube/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  type: ClusterIP
  selector:
    io.kompose.service: proxy-service
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8000
