TestKube/redis.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     io.kompose.service: redis
#   name: redis
# spec:
#   ports:
#     - name: "6379"
#       port: 6379
#       targetPort: 6379
#   selector:
#     io.kompose.service: redis
# status:
#   loadBalancer: {}
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: redis-server
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: redis
#   strategy: {}
#   template:
#     metadata:
#       annotations:
#       labels:
#     spec:
#       containers:
#         - image: redis
#           name: redis
#           ports:
#             - containerPort: 6379
#           resources: {}
#       restartPolicy: Always
# status: {}

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis
          name: redis-server
          ports:
            - containerPort: 6379
