TestKube/ingress-service.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: total-ingress
# spec:
#   ingressClassName: azure-application-gateway
#   tls:
#   - secretName: frontend-tls
#   rules:
#    - http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: proxy-service
#             port:
#               number: 80
#         pathType: Exact

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service-proxy
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     # nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /api  #proxy(/|$)(.*)
#             pathType: Prefix #ImplementationSpecific
#             backend:
#               service:
#                 name: dotnet-server-service
#                 port:
#                   number: 443
#   # # This section is only required if TLS is to be enabled for the Ingress
#   tls:
#     - secretName: frontend-tls

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-proxy
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api  # Handles all requests starting with /api
            pathType: Prefix
            backend:
              service:
                name: dotnet-server-service
                port:
                  number: 443
          - path: /     # Default catch-all for all other requests
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 443
  tls:
    - secretName: frontend-tls
